style.css
/* ... */
.groupInfRate
{
	display: inline-block;
	width: 100%;
	margin: 8px 0;
	padding: 0;
}
.infectionCard
{
	width: 100%;
	margin-bottom: 5px;
}
#infectCitiesContainer > .infectionCard, #infectCitiesContainer > .btnContinue { margin-top: 20px }
.infectionCardContents { position: relative }
.infectionCard *
{
	position: absolute;
	pointer-events: none;
}
.infectionCardImg
{
	width: 100%;
}
.cityName
{
	margin-left: 20%;
	color: #000;
	font-family: 'Audiowide', 'Electrolize', sans-serif;
	font-weight: 700;
}
.veil
{
	width: 89.52%;
	left: 10.48%;
	z-index: 5;
}
#infectionDiscard .infectionCard
{
	display: block;
	padding-left: 1%;
	width: 100%;
	margin-top: 2px;
}
#infectionDiscard .infectionCardContents { width: 100% }
#epidemicContainer .btnDisabled { cursor: progress }
.epidemicFull
{
	width: 98%;
	margin: 2px 1%;
	overflow: hidden;
}
.epidemicFull h2
{
	font-size: 20px;
	text-align: center;
	padding: 5px 0;
	border-bottom: 2px solid #fff;
}
.epidemicFull.pending h2 { border-bottom: none; background-color: #007034;}
.epidemicFull > div
{
	padding: 10px;
	background-color: #007034;
}
.epidemicFull > div.highlighted
{
	background-color: #00a94f;
}
.epidemicFull h3
{
	font-size: 16px;
	color: rgb(189, 189, 189);
}
.epidemicFull > div.highlighted h3
{
	color: #fff;
}
.epidemicFull p
{
	font-size: 12px;
	font-weight: 700;
	padding: 3px 0 0 12px;
	color: rgb(172, 172, 1);
}
.epidemicFull > div.highlighted p
{
	color: yellow;
}
#playerPanelContainer
{
	width: 44.3%;
}
.playerPanel
{
	vertical-align: top;
	margin-right: 1%;
	color: #fff;
	text-align: center;
	border: 1px solid #fff;
	border-top: none;
	border-bottom-left-radius: 10px;
	border-bottom-right-radius: 10px;
	background-color: #353535;
	margin-left: -1px;
	overflow: hidden;
	position: relative;
	z-index: 6;
}
.playerPanel2 { width: 49.1% }
.playerPanel3 { width: 32.4% }
.playerPanel4 { width: 24.1% }
#playerPanelContainer .playerPanel:not(.hidden) { display: inline-block }

.name, .role
{
	width: 100%;
	font-size: 14px;
	white-space: nowrap;
	overflow: hidden;
}
.name
{
	font-family: 'Ropa Sans', sans-serif;
	line-height: 14px;
}
.role
{
	font-family: 'Oswald', sans-serif;
	font-size: 14px;
	border-top: 1px solid #fff;
	border-bottom: 1px solid #fff;
}
.role *:not(.playerCard.eventCard.contingency) { pointer-events: none }
.btnCollapseExpand
{
	background-color: #353535;
}
.btnCollapseExpand > .numCardsInHand
{
	font-size: 14px;
	font-family: 'Ropa Sans', sans-serif;
	padding: 3px 0;
}
.btnCollapseExpand > div
{
	font-family: 'Times New Roman', Times, serif;
	font-size: 20px;
	line-height: 12px;
	
	transform: rotate(-90deg);
	-webkit-transform: rotate(-90deg); /* Safari */
	-moz-transform: rotate(-90deg); /* Firefox */
	-ms-transform: rotate(-90deg); /* IE */
	-o-transform: rotate(-90deg); /* Opera */
	filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3); /* Internet Explorer */
}
.btnCollapseExpand > *
{
	pointer-events: none;
}
.btnCollapseExpand:hover
{
	background-color: #444;
	cursor: pointer;
}
.playerCard,
.epidemicFull > h2,
.eventCardFull > h3
{ font-family: 'Audiowide', 'Electrolize', sans-serif; }
.playerCard
{
	width: 98%;
	text-align: center;
	white-space: nowrap;
	margin: 2px 1%;
	border: none;
	font-size: 14px;
	overflow: hidden;
}
.playerCard
{
	border-top-left-radius: 5px;
	border-bottom-right-radius: 5px;
}
.playerCard:not(.b):not(.eventCard):not(.epidemic):not(.template),
.infectionCard:not(.template),
.playerPanel .role *:not(.eventCard),
#roleIndicator,
.roleTag
{ cursor: url("images/target_black.png"), auto }
.playerCard.b,
#eventDetails .locatable { cursor: url("images/target_white.png"), auto }
.playerCard:not(.b):not(.eventCard):not(.epidemic):not(.template):hover,
.infectionCard:not(.template):hover .cityName,
.playerPanel .role *:not(.eventCard):hover,
#roleIndicator:hover,
.roleTag:hover,
.playerCard.b:hover,
#eventDetails .locatable:hover
{ text-decoration: underline; }
.playerCard * { pointer-events: none }
.playerPanel > .playerCard:first-of-type { margin-top: 4px }
.playerPanel .playerCard.eventCard:not(.unavailable) { cursor: pointer }
#cardDrawContainer .playerCard
{
	width: 98%;
	height: 30px;
	line-height: 30px;
	margin: 20px 1%;
	font-size: 20px;
	font-weight: 700;
	overflow: hidden;
}
#cardDrawContainer .playerCard,
.epidemicFull
{
	border-top-left-radius: 10px;
	border-bottom-right-radius: 10px;
}
#cardDrawContainer h2
{
	text-align: center;
	font-size: 24px;
	font-family: 'Oswald', sans-serif;
}
.discardPrompt
{
	padding: 0 5% 5px 5%;
}
.cardsToKeep > .instructions
{
	font-size: 14px;
	margin-bottom: 5px;
	border-bottom: 1px solid #fff;
}
.discardPrompt p span
{
	float: right;
	padding: 0 2px;
}
.discardPrompt .playerCard
{
	margin-bottom: 3px;
	cursor: pointer !important;
}
.discardSelections > p
{
	margin-left: 3%;
	margin-bottom: 3px;
}
.discardPrompt .discardSelections
{
	width: 100%;
	margin: 0;
	padding: 0;
	min-height: 45px;
}
.discardPrompt .cardsToKeep
{
	min-height: 45px;
	padding-bottom: 3px;
}
.cardsToKeep .playerCard:last-of-type { margin-bottom: 0 !important; }
.btnConfirm
{
	margin: 5px;
}
.scientist:not(.pawnArrow),
.pawnArrow.scientist > div
{
	background-image: linear-gradient(to bottom, #f6f6f7, #9ccdd1);
	color: #000;
}
.roleCard.scientist{ background-image: linear-gradient(to top, #f6f6f7, #9ccdd1) }
.scientistBorder { border: 2px solid #f6f6f7 }

.researcher:not(.pawnArrow),
.pawnArrow.researcher > div
{ background-image: linear-gradient(to bottom, #966c4b, #2a2017) }
.researcherBorder { border: 2px solid #574319 }

.quarantineSpecialist:not(.pawnArrow),
.pawnArrow.quarantineSpecialist > div
{ background-image: linear-gradient(to bottom, #398044, #043d0a) }
.quarantineSpecialistBorder { border: 2px solid #006951 }

.operationsExpert:not(.pawnArrow),
.pawnArrow.operationsExpert > div,
#btnOperationsFlight
{ background-image: linear-gradient(to bottom, #aad37a, #407f48) }
.operationsExpertBorder { border: 2px solid #8dc73f }
/* ... */

